=================
= ESPRESSO NEWS =
=================

NOTEWORTHY CHANGES SINCE v2.2.0b
================================

User-visible changes
--------------------

* The P3M algorithm for electrostatic and dipolar (magnetostatic)
  interactions has been extended.

  * Electrostatic P3M allows for non-cubic boxes.

  * The electrostatic P3M pressure tensor is computed correctly now.

  * Dipolar P3M has been parallelized (electrostatics P3M was
    parallelized already!)

  * The MDLC method (magnetic dipolar layer correction) has been
    parallelized.

* The virtual sites feature has been significantly extended and
  documented.  Virtual sites are particles that can interact with
  other particles but whose positions are not integrated via the
  normal integrator.  Instead, the positions are determined by the
  positions of other, "real" particles.  Virtual sites can either be
  set into the center of mass of a set of real particles (feature
  VIRTUAL_SITES_COM), or it can be set to an arbitrary location
  relative to another particle (VIRTUAL_SITES_RELATIVE).  This allows
  to create rigid structures within ESPResSo.

* Some constraints can now be made penetrable or reflecting.

* The build system has been overhauled and simplified.

  * "Espresso" is now the actual binary instead of a wrapper shell
    script that automatically calls MPI. This means that it is
    necessary to call "mpiexec" or "mpirun" youself to run ESPResSo in
    an MPI environment.

  * The directory where the scripts are installed is now compiled into
    the binary, i.e. it is not necessary anymore to set the
    environment variable ESPRESSO_SCRIPTS. Still, it will heed the
    environment variable if it is set.

  * Running "make check" will run the testsuite with a single number
    of processors, which gives a significant speedup. "configure" will
    try to determine the available number of CPUs/cores. If it can't,
    it will use 1 by default.
