@@ -8,6 +8,10 @@ NOTEWORTHY CHANGES SINCE v2.2.0b
 User-visible changes
 --------------------
 
+* The Lattice-Boltzmann implementation in ESPResSo has been
+  significantly overhauled and it has been documented for the first
+  time.
+
 * The P3M algorithm for electrostatic and dipolar (magnetostatic)
   interactions has been extended.
 
